定时器已经修改好了 出现了一个小bug就是DMA初始化之后在中断里貌似失效

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ include_directories(Core/Inc Drivers/STM32F4xx_HAL_Driver/Inc Drivers/STM32F4xx_
         myLib/BSP
         myLib/cmathpp
         myLib/GPIO
+        myLib/HardwareTimer
         myLib/Serial/BaseLib
         myLib/Serial/DataStream
         myLib/Serial/OtherLib
@@ -67,6 +68,7 @@ file(GLOB_RECURSE SOURCES "Core/*.*" "Drivers/*.*"
         "myLib/BSP/*.*"
         "myLib/cmathpp/*.*"
         "myLib/GPIO/*.*"
+        "myLib/HardwareTimer/*.*"
         "myLib/Serial/BaseLib/*.*"
         "myLib/Serial/DataStream/*.*"
         "myLib/Serial/OtherLib/*.*"
